polarstomps-ui/polarstomps-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polarstomps
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: polarstomps
  template:
    metadata:
      labels:
        app: polarstomps
    spec:
      serviceAccountName: polarstomps
      nodeSelector:
        cloud.google.com/compute-class: "Scale-Out"
      containers:
        - name: polarstomps
          image: howdoicomputer/polarstomps:v22
          imagePullPolicy: IfNotPresent
          ports:
            - name: polarstomps
              containerPort: 8080
              protocol: TCP
          ports:
            - name: monitoring
              containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
              ephemeral-storage: 10Mi
