polarstomps-ui/polarstomps-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: polarstomps
  namespace: polarstomps
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "polarstomps"}'
spec:
  type: NodePort
  ports:
    - name: polarstomps
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: monitoring
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: polarstomps
