polarstomps-ui/polarstomps-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polarstomps-ingress
  namespace: polarstomps
spec:
  defaultBackend:
    service:
      name: polarstomps
      port:
        number: 8080
